--- a/php/content/contacts/index.phtml
+++ b/php/content/contacts/index.phtml
@@ -8,7 +8,7 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
     <h5>Контакты</h5>
 </div>
 
-<div class="contactStores mobile--hide">
+<div class="contactStores center-wrap mobile--hide">
     <div style="padding-top: 4em;">
         <strong class="contactStores__itemTitle">Санкт-Петербург</strong>
         <button class="btn btn--blue btn_showMap" data-city="spb">Показать карту</button>
