--- a/php/content/pools/series.phtml
+++ b/php/content/pools/series.phtml
@@ -13,11 +13,11 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
         <?php endforeach; ?>
 </div>
 
-<div class="center-wrap" style="padding-top: 2.1rem;">
+<!--<div class="center-wrap" style="padding-top: 2.1rem;">
     <div class="article" style="padding-top: 2.1rem;">
         <?=$page->getValue('content')?>
     </div>
-</div>
+</div>-->
 
 <script>
     var items = $(".series__model");
