--- a/php/content/pools/series/preview.phtml
+++ b/php/content/pools/series/preview.phtml
@@ -129,7 +129,7 @@ $old_price = ($p=$category->getValue('old_price'))?$p:false;
     </div>
 </div>
 
-<div class="series__wrap desktop--hide" style="margin-bottom: 50px;">
+<div class="series__wrap-mobile desktop--hide">
     <div class="series__item-mobile">
         <img src="<?=$photos[0]?>" style="width:100%;object-fit:cover;">
         <div class="series__name-mobile" data-list="<?=mb_strtolower($category->getValue('seriya'))?>">
