--- a/php/emarket/purchasing_one_step/cart.phtml
+++ b/php/emarket/purchasing_one_step/cart.phtml
@@ -10,7 +10,7 @@ $cart = $this->macros('emarket', 'cart');
 $cart['drawFormButton'] = true;
 ?>
 
-<div class="cart onestep">
+<div class="cart onestep mobile--hide">
 	<div data-full-cartlist="hide" class="cart__hide-list d-sm-none hidden_tablet">
 		<a href="javascript:;" class="cart__hide-list-trigger">
 			Скрыть детали заказа
@@ -22,6 +22,10 @@ $cart['drawFormButton'] = true;
 			<?= $this->translate('cart_reminder') ?>
 		</h2>
 	</div>
+	<?= $this->render($cart, 'emarket/cart/product_list') ?>
+</div>
+
+<div class="cart onestep-mobile hidden desktop--hide">
 	<?= $this->render($cart, 'emarket/cart/product_list') ?>
 </div>
 
