--- a/php/content/pools/page.phtml
+++ b/php/content/pools/page.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 
 $page = $variables['page'];
 
@@ -39,11 +39,25 @@ $product__tabs['delivery'] = 'Доставка и оплата';
 </style>
 
 <section class="product" id="product-page">
-  <div class="product__top">
+    <div style="display: flex;">
+      <div style="display: flex;">
+        <div>
+          <h4>Модель</h4>
+          <h2><?= ucfirst(mb_strtolower($variables['header'])) ?></h2>
+        </div>
+        <div>
+          <img src="<?=$page->getValue('chertezh')?>" alt="">
+        </div>
+      </div>
+    </div>
+
+
+
+  <!-- <div class="product__top">
     <div class="center-wrap">
-      <div class="product__title"><?= $this->escape($variables['header']) ?></div>
+      <div class="product__title"><!?= $this->escape($variables['header']) ?></div>
       <div class="product__inner">
-        <?= $this->render($variables, 'layout/header/breadcrumbs') ?>
+        <!?= $this->render($variables, 'layout/header/breadcrumbs') ?>
         <div class="product__inner-right mobile--hide">
           <div class="product__inner-postpone comparisons comparisons--bg comparisons--heart">
             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -55,11 +69,11 @@ $product__tabs['delivery'] = 'Доставка и оплата';
     </div>
   </div>
   
-  <?php if($fabrikaId==63238||$fabrikaId==76607): ?>
-    <?= $this->render($variables, 'content/pools/page/pavilion') ?>
-  <?php else: ?>
-    <?= $this->render($variables, 'content/pools/page/poolModel') ?>
-  <?php endif; ?>
+  <!?php if($fabrikaId==63238||$fabrikaId==76607): ?>
+    <!?= $this->render($variables, 'content/pools/page/pavilion') ?>
+  <!?php else: ?>
+    <!?= $this->render($variables, 'content/pools/page/poolModel') ?>
+  <!?php endif; ?>
 
   <div class="product__info-wrap">
     <div class="center-wrap">
@@ -69,76 +83,76 @@ $product__tabs['delivery'] = 'Доставка и оплата';
   <div style="width:100%">
     <div class="product__tabs toogles__wrap">
       <div class="product__tabs-row mobile--hide">
-        <?php $i=1; foreach($product__tabs as $key => $tab): ?>
-          <div class="product__tabs-item toogles__item-title <?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<?=$i++?>"><?=$tab?></div>
-        <?php endforeach; ?>
+        <!?php $i=1; foreach($product__tabs as $key => $tab): ?>
+          <div class="product__tabs-item toogles__item-title <!?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<!?=$i++?>"><!?=$tab?></div>
+        <!?php endforeach; ?>
       </div>
       <div class="product__tabs-slider desktop--hide">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <?php $i=1; foreach($product__tabs as $key => $tab): ?>
+            <!?php $i=1; foreach($product__tabs as $key => $tab): ?>
 
               <div class="swiper-slide">
-                <div class="product__tabs-item toogles__item-title <?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<?=$i++?>"><?=$tab?></div>
+                <div class="product__tabs-item toogles__item-title <!?=($i == 1)?'toogles__item-title--active':''?>" data-toogles="<!?=$i++?>"><!?=$tab?></div>
               </div>
-            <?php endforeach; ?>
+            <!?php endforeach; ?>
             
           </div>
         </div>
       </div>
-      <?php $i=1; foreach($product__tabs as $key => $tab): ?>
-      <div class="toogles__item <?=($i == 1)?'toogles__item--active':''?>" data-toogles="<?=$i++?>">
-        <div class="toogles__item-content" style="<?=($i == 2)?'display: block;':''?>">
+      <!?php $i=1; foreach($product__tabs as $key => $tab): ?>
+      <div class="toogles__item <!?=($i == 1)?'toogles__item--active':''?>" data-toogles="<!?=$i++?>">
+        <div class="toogles__item-content" style="<!?=($i == 2)?'display: block;':''?>">
           <div>
             <div class="product__tabs-tab" style="margin:0;max-width:100%">
 
-            <?= $this->render($variables, 'blocks/tabs/'.$key) ?>
+            <!?= $this->render($variables, 'blocks/tabs/'.$key) ?>
 
             </div> 
           </div>
         </div>
       </div>
-      <?php endforeach; ?>
+      <!?php endforeach; ?>
     </div>
   </div>
 
-  <?php if($fabrikaId==53032){ ?>
+  <!?php if($fabrikaId==53032){ ?>
     <div class="product__column" style="position: sticky;top: 86px;display: table;">  
       <div class="product__price">
         <div class="price"> 
           <a style="font-size: 1.6rem;" data-fancybox data-src="#linerDesc" href="javascript:;"><u>LINER</u>
-          <p><?=$price?></p></a>
-          <?php if($price2){ ?>
+          <p><!?=$price?></p></a>
+          <!?php if($price2){ ?>
             <a style="font-size: 1.6rem;" data-fancybox data-src="#cristalDesc" href="javascript:;"><u>CRISTAL</u>
-            <p><?=$price2?></p></a>
-          <?php } ?>
+            <p><!?=$price2?></p></a>
+          <!?php } ?>
         </div>
       </div>
       <div class="product__row">
         <div class="product__row-basket1">
-          <div class="basket basket--blue" onclick="$('#callback input[name=&quot;system_form_id&quot;]').val(236);$('#callback .popup-form__title').text('Консультация по бассейну <?=$page->name?>');show_popup('callback')">
+          <div class="basket basket--blue" onclick="$('#callback input[name=&quot;system_form_id&quot;]').val(236);$('#callback .popup-form__title').text('Консультация по бассейну <!?=$page->name?>');show_popup('callback')">
             <span>Заказать консультацию</span>
           </div>
         </div>
       </div>
-      <!--div class="product__discount mobile--hide">
+      <div class="product__discount mobile--hide">
         <div class="discount">
           <svg viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M8.64144 7.36614L12.1263 0.525577C12.4833 -0.175192 13.5167 -0.175192 13.8737 0.525577L17.3586 7.36614L25.1643 8.4567C25.9637 8.56839 26.2832 9.51814 25.7047 10.0631L20.059 15.3818L21.3918 22.8971C21.5283 23.6667 20.6925 24.2533 19.978 23.8894L13 20.3357L6.02205 23.8894C5.3072 24.2534 4.47114 23.6661 4.60835 22.8963L5.94771 15.3818L0.295738 10.0635C-0.283268 9.51868 0.0360775 8.56842 0.835721 8.4567L8.64144 7.36614Z"></path>
           </svg><a class="discount__link mobile--hide" href="">Получите скидку 3% от суммы заказа</a>
         </div>
-      </div-->
+      </div>
 
-      <?= $this->render($variables, 'blocks/product/props') ?>
+      <!?= $this->render($variables, 'blocks/product/props') ?>
   </div>
-  <?php } ?>
+  <!?php } ?>
 </div>  
 
 
 
 
     </div>
-  </div> 
+  </div>  -->
 </section>    
 
 
