--- a/src/assets/css/blocks/sections/services.scss
+++ b/src/assets/css/blocks/sections/services.scss
@@ -40,6 +40,10 @@
         @media screen and (max-width:$large_tablet) {
             margin-bottom: 3rem;
         }
+        @media screen and (max-width:$small_tablet) {
+            display: flex;
+            margin-bottom: 0;
+        }
     }
 
     &__img {
@@ -57,6 +61,13 @@
         @media screen and (max-width:$large_tablet) {
             margin-right: 0;
             max-width: 100%;
+        }
+
+        @media screen and (max-width:$small_tablet) {
+            margin-right: 0;
+            max-width: 100%;
+            width: 70px;
+            height: 70px;
         }
 
         >div {
@@ -100,18 +111,6 @@
             svg {
                 width: 63.3%;
             }
-
-            @media screen and (max-width:$large_tablet) {
-                background: rgba(195, 195, 195, 0.26);
-
-                &:hover {
-                    background: rgba(30, 90, 172, 0.3);
-                }
-
-                svg {
-                    fill: #ADADAD;
-                }
-            }
         }
 
         &--three {
@@ -121,18 +120,6 @@
                 width: 42%;
                 fill: #4081FF;
             }
-
-            @media screen and (max-width:$large_tablet) {
-                background: rgba(195, 195, 195, 0.26);
-
-                svg {
-                    fill: #ADADAD;
-                }
-
-                &:hover {
-                    background: rgba(64, 129, 255, 0.22);
-                }
-            }
         }
 
         &--four {
@@ -141,18 +128,6 @@
             svg {
                 width: 63.3%;
                 fill: #4081FF;
-            }
-
-            @media screen and (max-width:$large_tablet) {
-                background: rgba(195, 195, 195, 0.26);
-
-                svg {
-                    fill: #ADADAD;
-                }
-
-                &:hover {
-                    background: rgba(123, 191, 107, 0.26);
-                }
             }
         }
     }
@@ -209,12 +184,33 @@
                 }
             }
         }
+        @media screen and (max-width:$small_tablet) {
+            width: 100%;
+            margin-bottom: 0;
+            display: flex;
+            padding: 15px;
+            border-bottom: 1px solid #E2E6F0;
+            justify-content: space-between;
+            align-items: center;
+            &:last-child {
+                border-bottom: none;
+            }
+            div:nth-child(1) {
+                display: flex;
+                align-items: center;
+            }
+        }
     }
 
 
 
     &__info {
         padding-top: 2rem;
+        @media screen and (max-width:$small_tablet) {
+            width: 150px;
+            margin-left: 20px;
+            padding: 0;
+        }
     }
 
     &__title {
@@ -228,6 +224,13 @@
 
         @media screen and (max-width:$large_tablet) {
             margin-bottom: 1.3rem;
+        }
+
+        @media screen and (max-width:$small_tablet) {
+            margin: 0;
+            h5 {
+                margin: 0;
+            }
         }
 
         &::before {
