home links block fix

--- a/php/content/home/index.phtml
+++ b/php/content/home/index.phtml
@@ -62,20 +62,20 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
           </div></a>
 
         <div class="services__info mobile--hide"><a class="services__title" href="/uslugi/">
-            <h4>Сервис</h4></a>
+            <h4>Сервис</h4></a> 
           <div class="services__text">
             <p>Изучите полный спектр<br>наших услуг</p>
           </div>
         </div>
       </div>
-      <div class="services__item toogles__item-title" data-toogles="3"><a class="services__img services__img--three mobile--hide" href="/shop/">
+      <div class="services__item toogles__item-title" data-toogles="3"><a class="services__img services__img--three mobile--hide" href="https://novopool.ru">
           <div>
             <svg viewBox="0 0 88 78" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M65.3945 28.2569L47.633 1.61466C46.8255 0.807324 45.6147 -1.52588e-05 44.4037 -1.52588e-05C43.1927 -1.52588e-05 41.9817 0.403655 41.1743 1.61466L23.4128 28.2569H4.0367C1.61468 28.2569 0 29.8715 0 32.2936C0 32.6972 0 33.1009 0 33.5046L10.0917 71.0459C10.8991 74.2752 14.1284 77.1009 17.7615 77.1009H70.2385C73.8716 77.1009 77.1009 74.6789 77.9082 71.0459L88 33.5046C88 33.1009 88 32.6972 88 32.2936C88 29.8715 86.3853 28.2569 83.9633 28.2569H65.3945ZM32.2936 28.2569L44.4037 10.4954L56.5138 28.2569H32.2936ZM44.4037 60.5504C39.9633 60.5504 36.3303 56.9174 36.3303 52.4771C36.3303 48.0367 39.9633 44.4037 44.4037 44.4037C48.844 44.4037 52.4771 48.0367 52.4771 52.4771C52.4771 56.9174 48.844 60.5504 44.4037 60.5504Z"></path>
             </svg>
           </div></a>
 
-        <div class="services__info mobile--hide"><a class="services__title" href="/shop/">
+        <div class="services__info mobile--hide"><a class="services__title" href="https://novopool.ru">
             <h4>Товары для бассейна</h4></a>
           <div class="services__text">
             <p>Посетите наш Интернет-Магазин, в котором мы собрали товары от проверенных производителей</p>
@@ -104,9 +104,9 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
   </div>
 
   <div class="services__list desktop--hide">
-      <div class="services__item toogles__item-title toogles__item-title--active" data-toogles="1">
+      <a href="/pools_catalog/" class="services__item toogles__item-title toogles__item-title--active" data-toogles="1">
         <div>
-          <a class="services__img services__img--one" href="/pools_catalog/">
+          <span class="services__img services__img--one" \>
             <div>
               <svg viewBox="0 0 114 81" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.2501 47.2754C19.0961 47.2754 14.91 51.4594 14.91 56.599C14.91 61.7386 19.0973 65.9215 24.2501 65.9215C29.404 65.9215 33.5912 61.7386 33.5912 56.6002C33.5935 51.4594 29.404 47.2754 24.2501 47.2754Z"></path>
@@ -115,10 +115,10 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
                 <path d="M82.7298 47.9705C79.1183 45.1504 73.3055 41.6683 65.4246 39.9562V37.7698C74.2733 39.5808 80.6562 43.4736 84.482 46.553C87.9328 44.064 92.1531 42.5795 96.7256 42.5795C99.2063 42.5795 101.575 43.0334 103.78 43.8274C103.549 38.425 102.879 32.7349 101.076 32.0535C92.1998 28.7556 80.6345 26.783 71.3082 25.9503V8.79678C71.3082 6.38853 72.5109 5.82998 72.6796 5.76172C73.8287 5.43979 74.4967 4.2476 74.1696 3.10434C73.8458 1.96334 72.6671 1.30469 71.5077 1.62207C69.8307 2.09644 66.9944 4.13612 66.9944 8.79678V25.6318C66.3344 25.5943 65.7119 25.5715 65.0929 25.5465L60.0472 3.88358C59.85 3.04291 59.1729 2.40017 58.3224 2.25115C57.2827 2.06914 32.6485 -2.20475 14.1201 1.51741C12.9538 1.75175 12.1957 2.88592 12.4283 4.05194C12.6631 5.21682 13.7952 5.97786 14.9694 5.73669C15.227 5.6855 15.4949 5.65024 15.7537 5.60246L12.3519 25.3486C12.3462 25.3895 12.361 25.4305 12.3553 25.4748H11.5904C7.51377 25.4748 6.70209 28.0981 6.70209 28.0981L4.20435 34.3457L6.28029 35.3752C11.1355 31.2753 17.4055 28.7897 24.2455 28.7897C39.6196 28.7897 52.122 41.269 52.122 56.6024C52.122 59.2928 51.7184 61.8853 51.0002 64.3471H75.8089C75.7986 64.0627 75.7667 63.7828 75.7667 63.4939C75.7667 57.3316 78.4651 51.803 82.7298 47.9705ZM90.9641 32.8816C91.5158 32.6666 92.1405 32.9374 92.3651 33.4902L94.1139 37.9393C94.3316 38.491 94.0557 39.1144 93.504 39.334C93.374 39.3817 93.2429 39.4068 93.1084 39.4068C92.6798 39.4068 92.2751 39.1474 92.1052 38.7254L90.3542 34.2763C90.1376 33.7234 90.41 33.0977 90.9641 32.8816ZM85.8819 32.8816C86.428 32.6666 87.0596 32.9374 87.2796 33.4902L89.0306 37.9393C89.2472 38.491 88.9725 39.1144 88.4196 39.334C88.2896 39.3817 88.1574 39.4068 88.024 39.4068C87.5919 39.4068 87.1884 39.1474 87.0197 38.7254L85.2709 34.2763C85.0532 33.7234 85.3256 33.0977 85.8819 32.8816ZM35.2864 26.5419C33.5913 25.9879 31.9542 25.5886 30.5167 25.4748H16.7079L19.8942 6.9812H35.2864V26.5419ZM61.1086 43.1141L53.2962 43.105C50.7027 36.1567 45.144 31.1923 39.5979 28.3233V6.98234H56.34L61.1063 27.4576V43.1153H61.1086V43.1141Z"></path>
               </svg> 
             </div>
-          </a>
+          </span>
 
-          <div class="services__info"><a class="services__title" href="/pools_catalog/">
-              <h5>Строительство бассейнов</h5></a>
+          <div class="services__info"><span class="services__title">
+              <h5>Строительство бассейнов</h5></span>
           </div>
         </div>
         <div style="width: 50px;">
@@ -126,10 +126,10 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
                 <path d="M38.5303 6.53033C38.8232 6.23744 38.8232 5.76256 38.5303 5.46967L33.7574 0.696699C33.4645 0.403806 32.9896 0.403806 32.6967 0.696699C32.4038 0.989593 32.4038 1.46447 32.6967 1.75736L36.9393 6L32.6967 10.2426C32.4038 10.5355 32.4038 11.0104 32.6967 11.3033C32.9896 11.5962 33.4645 11.5962 33.7574 11.3033L38.5303 6.53033ZM0 6.75L38 6.75V5.25L0 5.25L0 6.75Z" fill="#515151"/>
             </svg>
         </div>
-      </div>
-      <div class="services__item toogles__item-title" data-toogles="2">
+      </a>
+      <a class="services__item toogles__item-title" href="/uslugi/" data-toogles="2">
         <div>
-          <a class="services__img services__img--two" href="/uslugi/">
+          <a class="services__img services__img--two">
             <div>
             <svg width="513" height="513" viewBox="0 0 513 513" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 51.3%;">
             <g clip-path="url(#clip0)">
@@ -146,8 +146,8 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
             </div>
           </a>
 
-          <div class="services__info"><a class="services__title" href="/uslugi/">
-              <h5>Сервис</h5></a>
+          <div class="services__info"><span class="services__title">
+              <h5>Сервис</h5></span>
           </div>
         </div>
         <div style="width: 50px;">
@@ -155,19 +155,19 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
                 <path d="M38.5303 6.53033C38.8232 6.23744 38.8232 5.76256 38.5303 5.46967L33.7574 0.696699C33.4645 0.403806 32.9896 0.403806 32.6967 0.696699C32.4038 0.989593 32.4038 1.46447 32.6967 1.75736L36.9393 6L32.6967 10.2426C32.4038 10.5355 32.4038 11.0104 32.6967 11.3033C32.9896 11.5962 33.4645 11.5962 33.7574 11.3033L38.5303 6.53033ZM0 6.75L38 6.75V5.25L0 5.25L0 6.75Z" fill="#515151"/>
             </svg>
         </div>
-      </div>
-      <div class="services__item toogles__item-title" data-toogles="3">
+      </a>
+      <a class="services__item toogles__item-title" href="https://novopool.ru" data-toogles="3">
         <div>
-          <a class="services__img services__img--three" href="/shop/">
+          <span class="services__img services__img--three">
             <div>
               <svg viewBox="0 0 88 78" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M65.3945 28.2569L47.633 1.61466C46.8255 0.807324 45.6147 -1.52588e-05 44.4037 -1.52588e-05C43.1927 -1.52588e-05 41.9817 0.403655 41.1743 1.61466L23.4128 28.2569H4.0367C1.61468 28.2569 0 29.8715 0 32.2936C0 32.6972 0 33.1009 0 33.5046L10.0917 71.0459C10.8991 74.2752 14.1284 77.1009 17.7615 77.1009H70.2385C73.8716 77.1009 77.1009 74.6789 77.9082 71.0459L88 33.5046C88 33.1009 88 32.6972 88 32.2936C88 29.8715 86.3853 28.2569 83.9633 28.2569H65.3945ZM32.2936 28.2569L44.4037 10.4954L56.5138 28.2569H32.2936ZM44.4037 60.5504C39.9633 60.5504 36.3303 56.9174 36.3303 52.4771C36.3303 48.0367 39.9633 44.4037 44.4037 44.4037C48.844 44.4037 52.4771 48.0367 52.4771 52.4771C52.4771 56.9174 48.844 60.5504 44.4037 60.5504Z"></path>
               </svg>
             </div>
-          </a>
+          </span>
 
-          <div class="services__info"><a class="services__title" href="/shop/">
-              <h5>Товары для бассейна</h5></a>
+          <div class="services__info"><span class="services__title" >
+              <h5>Товары для бассейна</h5></span>
           </div>
         </div>
         <div style="width: 50px;">
@@ -175,10 +175,10 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
                 <path d="M38.5303 6.53033C38.8232 6.23744 38.8232 5.76256 38.5303 5.46967L33.7574 0.696699C33.4645 0.403806 32.9896 0.403806 32.6967 0.696699C32.4038 0.989593 32.4038 1.46447 32.6967 1.75736L36.9393 6L32.6967 10.2426C32.4038 10.5355 32.4038 11.0104 32.6967 11.3033C32.9896 11.5962 33.4645 11.5962 33.7574 11.3033L38.5303 6.53033ZM0 6.75L38 6.75V5.25L0 5.25L0 6.75Z" fill="#515151"/>
             </svg>
         </div>
-      </div>
-      <div class="services__item toogles__item-title" data-toogles="4">
+      </a>
+      <a class="services__item toogles__item-title" href="/pavilion_catalog/" data-toogles="4">
         <div>
-        <a class="services__img services__img--four" href="/pavilion_catalog/">
+        <span class="services__img services__img--four">
           <div>
           <svg width="284" height="239" viewBox="0 0 284 239" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M48.02 132.835C49.287 137.297 53.422 140.415 58.08 140.415C58.745 140.415 59.41 140.35 60.068 140.219L120.43 128.243L130.044 149.86L76.886 181.928C81.675 182.926 86.435 184.014 91.137 185.111C92.012 185.316 92.878 185.512 93.748 185.714L137.213 159.494C141.71 156.777 143.569 150.883 141.439 146.076L131.092 122.805C129.069 118.252 123.788 115.441 118.78 116.411L59.146 128.251L56.217 117.82L135.229 101.352L181.376 180.55C181.47 181.301 181.446 182.557 181.357 183.845C185.404 182.888 189.403 181.959 193.371 181.091C193.314 179.514 193.114 178.011 192.713 176.723C194.985 178.011 197.441 179.01 200.026 179.705C207.969 178.132 215.829 176.946 223.772 176.545C233.087 171.122 239.374 161.051 239.374 149.523C239.374 132.274 225.341 118.238 208.096 118.238C191.019 118.238 177.111 132.012 176.84 149.029L145.557 95.3411C143.186 91.2641 137.772 88.8171 133.108 89.7781L51.553 106.59C48.872 107.141 46.533 108.779 45.134 111.08C43.734 113.378 43.356 116.211 44.098 118.836L48.02 132.835ZM208.091 130.185C218.75 130.185 227.422 138.861 227.422 149.525C227.422 160.185 218.755 168.856 208.091 168.856C197.431 168.856 188.76 160.185 188.76 149.525C188.76 138.86 197.436 130.185 208.091 130.185Z" fill="#78BF6D"/>
@@ -188,10 +188,10 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
 
 
           </div>
-        </a>
+        </span>
 
-        <div class="services__info"><a class="services__title" href="/pavilion_catalog/">
-            <h5>Укрытие бассейна</h5></a>
+        <div class="services__info"><span class="services__title">
+            <h5>Укрытие бассейна</h5></span>
         </div>
           </div> 
           <div style="width: 50px;">
@@ -199,7 +199,7 @@ $main_blog = $this->vsk_objByType($settings->getValue('main_blog'));
                 <path d="M38.5303 6.53033C38.8232 6.23744 38.8232 5.76256 38.5303 5.46967L33.7574 0.696699C33.4645 0.403806 32.9896 0.403806 32.6967 0.696699C32.4038 0.989593 32.4038 1.46447 32.6967 1.75736L36.9393 6L32.6967 10.2426C32.4038 10.5355 32.4038 11.0104 32.6967 11.3033C32.9896 11.5962 33.4645 11.5962 33.7574 11.3033L38.5303 6.53033ZM0 6.75L38 6.75V5.25L0 5.25L0 6.75Z" fill="#515151"/>
             </svg>
         </div>
-      </div>
+      </a>
   </div>
 </section>
 
